[package]
name = "ca"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }

[lints.rust]
missing_docs = "deny"
warnings = "deny"
unused = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
style = "deny"
perf = "deny"
complexity = "deny"
correctness = "deny"
restriction = "deny"
nursery = "deny"
