[package]
name = "ca"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
toml_edit = "0.25.8"

[lints.rust]
missing_docs = "deny"
warnings = "deny"
unused = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
style = "deny"
perf = "deny"
complexity = "deny"
correctness = "deny"
restriction = "deny"
nursery = "deny"
