[package]
name = "ca"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
toml_edit = "0.25.8"

[lints.rust]
missing_docs = "warn"
warnings = "warn"
unused = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
style = "warn"
perf = "warn"
complexity = "warn"
correctness = "warn"
restriction = "warn"
nursery = "warn"
